<resources>
    <string name="app_name">Tracking Solar</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_lista_funcoes">Tracking Solar</string>
    <string name="txtSobre">Sobre:</string>
    <string name="lblSobre">Esse projeto tem o objetivo de integrar o Hardware com o Software, utilizando as ferramentas Arduino, Android, MySQL.</string>

    <string name="menu_settings">Settings</string>
    <string name="novos_devices_encontrados">Novos devices encontrados</string>
    <string name="devices_pareados">Devices pareados</string>
    <string name="buscar">Buscar</string>
    <string name="nenhum_pareado"></string>
    <string name="conectar">Conectar</string>
    <string name="enviar_msg">Enviar mensagem</string>
    <string name="aguardando_conex_o_">Aguardando conexão...</string>
    <string name="chat_server">Chat Server</string>
    <string name="chat_client">Chat Client</string>
    <string name="lista_pareados">Lista Pareados</string>
    <string name="lista_devices">Lista Devices</string>
    <string name="bluetooth_check">Bluetooth Check</string>
    <string name="lblVerificarBlue">Verificar e ativar Bluetooth</string>
    <string name="lblListaPareados">Lista de Dispositivos pareados</string>
    <string name="lblBuscarDispositivos">Buscar dispositivos</string>
    <string name="lblVisivel">Ficar Visível</string>
    <string name="lblComunicacao">Iniciar Comunicação</string>
    <string name="btnAtivar">Ativar</string>
    <string name="btnListar">Listar</string>
    <string name="btnBuscar">Buscar</string>
    <string name="btnVisivel">Visível</string>
    <string name="btnChat">Chat</string>
    <string name="lblVerificado">Verificado!!!</string>
    <string name="title_activity_maps">Map</string>
    <string name="ID">ID</string>
    <string name="DT">DT</string>
    <string name="WATTS">WATTS</string>
    <string name="HUMIDADE">HUMIDADE</string>
    <string name="TEMP">TEMP</string>
    <string name="CORRENTE">CORRENTE</string>
    <string name="TENSAO">TENSAO</string>
    <string name="txtDataInicio">Data Inicio:</string>
    <string name="txtDataFinal">Data Final:</string>
    <string name="btnGerar">GERAR</string>
    <string name="btnConfSalvar">Salvar</string>
    <string name="txtWatts">Watts:</string>
    <string name="txtTemperatura">Temperatura:</string>
    <string name="txtHumidade">Umidade:</string>

</resources>
