<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cassiano.trackingsolarandroidarduino.FiltroActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txtDataInicio"
            android:id="@+id/txtDataInicio"
            android:textStyle="bold"/>

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:id="@+id/calendarViewInicio"
            android:layout_weight="0.63"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txtDataFinal"
            android:id="@+id/txtDataFinal"
            android:textStyle="bold"
            />

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:id="@+id/calendarViewFinal"
            android:layout_weight="0.33" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnGerar"
            android:id="@+id/btnGerar"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:onClick="clickGerar" />
    </LinearLayout>
</RelativeLayout>
